loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:5: error: '(' expected but '{' found.
  } while {
          ^